# car_detection_model

./: Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/cardetection/models/: cardetection.py
